ocaml/testsuite/tests/jane-modular-syntax/user_error1.compilers.reference
File "user_error1.ml", line 21, characters 44-65:
21 | let _malformed_extension_has_payload = () [@jane.erasable.layouts "no payloads"];;
                                                 ^^^^^^^^^^^^^^^^^^^^^
Error: Modular syntax attributes are not allowed to have a payload,
       but "jane.erasable.layouts" does
